// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component Should be 32x32 1`] = `
<figure
  className="image is-32x32"
>
  <img
    alt=""
    className=""
    onError={[Function]}
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component Should be rounded 1`] = `
<figure
  className="image"
>
  <img
    alt=""
    className="is-rounded"
    onError={[Function]}
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component Should be square 1`] = `
<figure
  className="image is-square"
>
  <img
    alt=""
    className=""
    onError={[Function]}
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component Should exist 1`] = `[Function]`;

exports[`Image component Should have image classname 1`] = `
<figure
  className="image"
>
  <img
    alt=""
    className=""
    onError={[Function]}
    src="http://mydomain.com/image"
  />
</figure>
`;

exports[`Image component should be fullwidth 1`] = `
<figure
  className="image is-fullwidth"
>
  <img
    alt=""
    className=""
    onError={[Function]}
    src="http://mydomain.com/image"
  />
</figure>
`;
